# mobileMangerSkill

./: .env.example  .gitignore  CLAUDE.md  SKILL.md  cli.py  install.sh  main.py  manifest.json  pylint_report.json  pyproject.toml  requirements.txt  run_comprehensive_tests.py  run_simple_test.py  产品方案文档.md  可行性分析报告.md  启动说明.md  安全修复总结.md  安全修复验证测试报告.md  安全审查报告.md  开发计划.md  手机控制技能项目_全面测试报告.md  技术方案.md  接口规范.md  测试报告.md  测试用例.md  测试用例_安全修复验证.md  测试计划.md  社媒需求挖掘与市场评估报告.md  需求方案文档.md
src/: adb_client.py  command_handler.py  database.py  device_manager.py  scrcpy_client.py  screen.py  script_recorder.py  script_runner.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_basic.py  test_security.py  test_static_analysis.py
