[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-cli"
version = "0.1.0"
description = "手机控制CLI工具 - 通过ADB远程控制Android设备"
readme = "SKILL.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mobile Control Team"}
]
keywords = ["adb", "android", "mobile", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pure-python-adb>=0.3.0.dev0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pydantic>=2.4.0",
    "slowapi>=0.1.9",
    "limits>=3.6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
mobile-cli = "cli:app"

[project.urls]
Homepage = "https://github.com/example/mobile-cli"
Documentation = "https://github.com/example/mobile-cli#readme"
Repository = "https://github.com/example/mobile-cli.git"
